# tree-sitter-snakemake

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-snakemake.pc.in
bindings/c/tree_sitter/: tree-sitter-snakemake.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_snakemake/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSnakemakeTests/: TreeSitterSnakemakeTests.swift
queries/snakemake/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: directives.txt  rules.txt  rules_modularization.txt  wildcard_strings.txt  wildcards.txt
test/highlight/: rules_and_directives.smk  rules_modularizaton.smk
tree-sitter-snakemake/: grammar.js  package.json
tree-sitter-snakemake-wildcards/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-snakemake-wildcards/bindings/node/: binding.cc  index.js
tree-sitter-snakemake-wildcards/bindings/rust/: lib.rs
tree-sitter-snakemake-wildcards/src/: grammar.json  node-types.json  parser.c  scanner.cc
tree-sitter-snakemake-wildcards/test/corpus/: wildcards.txt
tree-sitter-snakemake/src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
tree-sitter-snakemake/test/corpus/: directives.txt  rules.txt  wildcard_strings.txt  wildcards.txt
