[package]
name = "tree-sitter-snakemake"
description = "snakemake grammar for tree-sitter, based on tree-sitter-python"
version = "2.0.0"
authors = ["Oliver Thomas"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "snakemake"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-snakemake"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
